[package]
name = "shred-decoder"
version = "0.1.0"
edition = "2021"
description = "High-level UDP shred decoder with parallel Reed-Solomon recovery"

[dependencies]
# Pulled from crates.io; the top-level workspace applies a `[patch.crates-io]`
# that redirects this to https://github.com/Minival1/solana-ledger-patched,
# which widens `pub` visibility on `merkle::Shred` internals + `traits::Shred`
# + `SIZE_OF_MERKLE_PROOF_ENTRY` so this crate can pattern-match directly
# (mirrors what jito's `eric/v2.2-merkle-recovery` branch had done for 2.2.x).
solana-ledger = "=2.3.1"
solana-perf = "=2.3.1"
solana-streamer = "=2.3.1"
solana-net-utils = "=2.3.1"
solana-entry = "=2.3.1"
solana-sdk = "=2.3.1"

ahash = "0.8"
itertools = "0.14.0"
crossbeam-channel = "0.5.8"
bincode = "=1.3.3"
rand = "0.8"
socket2 = "0.5"
tracing = "0.1"
thiserror = "1"
